data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_695.wast
;; 6. **Invalid Result Type after Nop in If Statement**:    - Write an if-statement whose true branch contains a `nop` and an integer-producing operation, while the false branch produces a different type (like float).    - Examines if `nop` affects the type constraints in conditional branches.    - **Reasoning**: Ensures correct type enforcement within conditional paths.

(assert_invalid 
  (module 
    (func 
      (if (i32.const 1) 
        (then (nop) (i32.const 42)) 
        (else (f32.const 1.0)) 
      )
    )
  )
  "type mismatch"
)